fixing the touch on mobile

--- a/global.css
+++ b/global.css
@@ -81,29 +81,32 @@
     html {
         -webkit-text-size-adjust: 100%;
         height: 100%;
+        scroll-behavior: smooth;
     }
 
     html,
     body {
-        touch-action: pan-y;
-        overscroll-behavior-y: auto;
+        height: 100%;
+        margin: 0;
+        overscroll-behavior: auto;
     }
-
 
     body {
         color: #fff;
         background: var(--primary);
         font-family: "Inter", Arial, Helvetica, sans-serif;
         margin: 0;
-        overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
+        overflow-y: auto;
     }
 
     #canvas {
         position: fixed;
         top: 0;
         left: 0;
-        touch-action: pan-y;
-        pointer-events: auto;
+        touch-action: none;
+        pointer-events: none;
+        z-index: 10;
     }
 
     .projects,
